tests/purs/failing/NewtypeInstance3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/NewtypeInstance3.purs:8:1 - 8:43 (line 8, column 1 - line 8, column 43)

  Cannot derive newtype instance for
  [33m               [0m
  [33m  Main.Nullary [0m
  [33m               [0m
  Make sure this is a newtype.

in value declaration [33mnullary[0m

See https://github.com/purescript/documentation/blob/master/errors/InvalidNewtypeInstance.md for more information,
or to contribute content related to this error.

